--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "angular2-ladda": "1.2.3",
     "angular2-text-mask": "8.0.4",
     "angular2-toaster": "4.0.1",
+    "auth0-js": "^9.7.3",
     "bootstrap": "4.0.0",
     "brace": "0.11.0",
     "chart.js": "2.7.1",
+    "classlist.js": "^1.1.20150312",
     "codemirror": "5.33.0",
     "core-js": "^2.5.4",
     "dragula": "3.7.2",
     "flag-icon-css": "2.9.0",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "moment": "2.20.1",
     "ng-select": "1.0.0-rc.3",
     "ng2-ace-editor": "0.3.4",
@@ -52,6 +55,7 @@
     "simple-line-icons": "^2.4.1",
     "spinkit": "1.2.5",
     "ts-helpers": "1.1.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
