--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ng2-ace-editor": "0.3.4",
     "ng2-charts": "1.6.0",
     "ng2-dragula": "1.5.0",
+    "ng2-webstorage": "^2.0.0",
     "ngx-bootstrap": "2.0.0-rc.0",
     "ngx-quill": "2.0.4",
     "rxjs": "^6.0.0",
