--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ng2-webstorage": "^2.0.0",
     "ngx-bootstrap": "2.0.0-rc.0",
     "ngx-quill": "2.0.4",
+    "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "simple-line-icons": "^2.4.1",
