--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/upgrade": "5.2.1",
     "angular-calendar": "0.23.2",
     "angular2-datatable": "0.6.0",
+    "angular2-jwt": "^0.2.3",
     "angular2-ladda": "1.2.3",
     "angular2-text-mask": "8.0.4",
     "angular2-toaster": "4.0.1",
@@ -48,8 +49,8 @@
     "ng2-ace-editor": "0.3.4",
     "ng2-charts": "1.6.0",
     "ng2-dragula": "1.5.0",
-    "ng2-webstorage": "^2.0.0",
     "ngx-bootstrap": "2.0.0-rc.0",
+    "ngx-permissions": "^5.0.0",
     "ngx-quill": "2.0.4",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
