--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ng2-ace-editor": "0.3.4",
     "ng2-charts": "1.6.0",
     "ng2-dragula": "1.5.0",
+    "ng2-timezone-selector": "^0.2.4",
     "ngx-bootstrap": "2.0.0-rc.0",
     "ngx-permissions": "^5.0.0",
     "ngx-quill": "2.0.4",
