--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^6.1.0",
     "@angular/upgrade": "5.2.1",
     "angular-calendar": "0.23.2",
+    "angular-font-awesome": "^3.1.2",
     "angular2-datatable": "0.6.0",
     "angular2-jwt": "^0.2.3",
     "angular2-ladda": "1.2.3",
