--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "angular2-jwt": "^0.2.3",
     "angular2-ladda": "1.2.3",
     "angular2-text-mask": "8.0.4",
-    "angular2-toaster": "4.0.1",
+    "angular2-toaster": "^4.0.1",
     "auth0-js": "^9.7.3",
     "bootstrap": "4.0.0",
     "brace": "0.11.0",
