TEN-57. Create user module. Notify

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.2",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -33,7 +33,6 @@
     "angular2-jwt": "^0.2.3",
     "angular2-ladda": "1.2.3",
     "angular2-text-mask": "8.0.4",
-    "angular2-toaster": "^4.0.1",
     "auth0-js": "^9.7.3",
     "bootstrap": "4.0.0",
     "brace": "0.11.0",
@@ -54,6 +53,7 @@
     "ngx-bootstrap": "2.0.0-rc.0",
     "ngx-permissions": "^5.0.0",
     "ngx-quill": "2.0.4",
+    "ngx-toastr": "^8.10.0",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
