TEN-59. Create user button + minor styles

--- a/angular.json
+++ b/angular.json
@@ -123,5 +123,10 @@
       }
     }
   },
-  "defaultProject": "tenderscout-admin-app"
+  "defaultProject": "tenderscout-admin-app",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
