--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ngx-permissions": "^5.0.0",
     "ngx-quill": "2.0.4",
     "ngx-toastr": "^8.10.0",
+    "ngx-toggle-switch": "^2.0.5",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
