--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "highcharts-angular": "^2.3.1",
         "intl": "^1.2.5",
         "moment": "2.20.1",
+        "ng-multiselect-dropdown": "^0.2.3",
         "ng-select": "1.0.0-rc.3",
         "ng2-ace-editor": "0.3.4",
         "ng2-charts": "1.6.0",
