--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "ng2-charts": "1.6.0",
         "ng2-completer": "^2.0.8",
         "ng2-dragula": "1.5.0",
+        "ng2-file-upload": "^1.3.0",
         "ng2-smart-table": "^1.3.5",
         "ng2-timezone-selector": "^0.2.4",
         "ngx-bootstrap": "2.0.0-rc.0",
