--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "ngx-toastr": "^8.10.0",
         "ngx-toggle-switch": "^2.0.5",
         "ngx-webstorage": "^2.0.1",
+        "ngx-file-drop": "^5.0.5",
         "rxjs": "^6.0.0",
         "rxjs-compat": "^6.2.2",
         "spinkit": "^1.2.5",
