--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
         "ng2-smart-table": "^1.3.5",
         "ng2-timezone-selector": "^0.2.4",
         "ngx-bootstrap": "2.0.0-rc.0",
+        "ngx-chips": "^1.9.7",
         "ngx-file-drop": "^5.0.5",
+        "ngx-pagination": "^4.1.0",
         "ngx-permissions": "^5.0.0",
         "ngx-quill": "2.0.4",
         "ngx-toastr": "^8.10.0",
@@ -65,8 +67,7 @@
         "spinkit": "^1.2.5",
         "ts-helpers": "1.1.2",
         "web-animations-js": "^2.3.2",
-        "zone.js": "~0.8.26",
-        "ngx-chips": "^1.9.7"
+        "zone.js": "~0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.7.0",
