--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "ng2-smart-table": "^1.3.5",
         "ng2-timezone-selector": "^0.2.4",
         "ngx-bootstrap": "2.0.0-rc.0",
+        "@ng-bootstrap/ng-bootstrap": "^4.1.0",
         "ngx-chips": "^1.9.7",
         "ngx-file-drop": "^5.0.5",
         "ngx-pagination": "^4.1.0",
