--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/scss/style.scss"
+                            "src/scss/style.scss",
+                            "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
                         ],
                         "scripts": []
                     },
