--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/core": "^6.1.0",
         "@angular/forms": "^6.1.0",
         "@angular/http": "^6.1.0",
+        "@angular/material": "^6.1.0",
         "@angular/platform-browser": "^6.1.0",
         "@angular/platform-browser-dynamic": "^6.1.0",
         "@angular/router": "^6.1.0",
@@ -51,6 +52,7 @@
         "ng2-ace-editor": "0.3.4",
         "ng2-charts": "1.6.0",
         "ng2-completer": "^2.0.8",
+        "ng2-date-picker": "^2.10.2",
         "ng2-dragula": "1.5.0",
         "ng2-file-upload": "^1.3.0",
         "ng2-smart-table": "^1.3.5",
