--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@agm/core": "1.0.0-beta.2",
         "@angular/animations": "^6.1.2",
+        "@angular/cdk": "^6.1.0",
         "@angular/common": "^6.1.0",
         "@angular/compiler": "^6.1.0",
         "@angular/core": "^6.1.0",
@@ -32,6 +33,7 @@
         "@ng-bootstrap/ng-bootstrap": "^4.1.0",
         "@ng-select/ng-select": "^2.20.0",
         "angular-calendar": "0.23.2",
+        "angular-tree-component": "^6.1.0",
         "angular2-datatable": "0.6.0",
         "angular2-ladda": "1.2.3",
         "angular2-text-mask": "8.0.4",
@@ -63,6 +65,7 @@
         "ngx-pagination": "^4.1.0",
         "ngx-permissions": "^5.0.0",
         "ngx-quill": "2.0.4",
+        "ngx-spinner": "^6.1.0",
         "ngx-toastr": "^8.10.0",
         "ngx-toggle-switch": "^2.0.5",
         "ngx-webstorage": "^2.0.1",
@@ -76,7 +79,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.7.0",
-        "@angular/cli": "~6.1.2",
+        "@angular/cli": "^6.1.1",
         "@angular/compiler-cli": "^6.1.0",
         "@angular/language-service": "^6.1.0",
         "@types/jasmine": "~2.8.6",
